# ngk

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
.cursor/rules/: map_book_instructions.mdc
.github/workflows/: deploy-pages.yml
python/: run.ps1
python/examples/: explore_block.py
python/ngk/: __init__.py  __init__.pyi
python/tests/: test_block.py
src/: lib.rs  main.rs  model.rs
src/builders/: errors.rs  mod.rs  profiles.rs  revolve.rs  sheets.rs  solids.rs
src/geometry/: axis.rs  curves.rs  mod.rs  point.rs  surfaces.rs  tolerance.rs  utils.rs
src/geometry/dim2/: curves.rs  mod.rs  utils.rs
src/geometry/dim3/: curves.rs  frame.rs  mod.rs  surfaces.rs  utils.rs
src/geometry/nurbs/: basis.rs  curve.rs  knots.rs  points.rs  surface.rs  tessellate.rs
src/modeling/: mod.rs  primitives.rs  profiles.rs  revolve.rs  sweep.rs
src/python/: mod.rs
src/scripts/: cylinder.rs  extruded_holed_pentagon.rs  extruded_open_polyline.rs  extruded_square.rs  hollow_cylinder.rs  interactive_extrusion.rs  mod.rs  revolved_triangle.rs  two_faces_alpha2.rs
src/tessellate/: curve.rs  face.rs  mod.rs  shape.rs  surface.rs
src/topology/: attributes.rs  builders.rs  closed.rs  dart.rs  edge.rs  face.rs  facet.rs  gmap.rs  loop_.rs  mod.rs  payload.rs  planar.rs  profile.rs  shape.rs  shape_keys.rs  sheet.rs  shell.rs  solid.rs  validation.rs  vertex.rs
src/viz/: brep.rs  gmap.rs  hints.rs  mod.rs  scene.rs
src/wasm/: mod.rs  nurbs.rs
tests/: builders.rs  geometry.rs  modeling.rs  nurbs_test.rs  scripts.rs  surfaces_test.rs  topology.rs
tests/builders/: revolve.rs  solids.rs
tests/modeling/: primitives.rs
tests/scripts/: interactive_extrusion.rs  mod.rs
tests/topology/: planar.rs  validation.rs
visualization/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
visualization/src/: App.tsx  styles.css
(+36 files in other folders)
