[package]
name = "ngk"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ngk"
path = "src/main.rs"

[features]
default = []
python = ["dep:pyo3"]
wasm = ["dep:wasm-bindgen", "dep:js-sys", "dep:serde-wasm-bindgen", "dep:console_error_panic_hook"]

[dependencies]
nalgebra = "0.34.2"
serde = { version = "1", features = ["derive"] }
pyo3 = { version = "0.22.6", optional = true, features = ["extension-module", "abi3", "abi3-py39", "generate-import-lib"] }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
slotmap = "1.1.1"
radians = "0.3.1"
thiserror = "2.0.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
